--- a/docs/docs/cmd/entra/m365group/m365group-list.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-list.mdx
@@ -35,9 +35,9 @@ m365 entra m365group list [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                                  |
-  |-----------------|----------------------------------------------|
-  | Microsoft Graph | GroupMember.Read.All, Group.Read.All, Directory.Read.All |
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
 
   </TabItem>
   <TabItem value="Application">
