--- a/docs/docs/cmd/entra/m365group/m365group-list.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-list.mdx
@@ -42,9 +42,9 @@ m365 entra m365group list [options]
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions  |
-  |-----------------|--------------|
-  | Microsoft Graph | GroupMember.Read.All, Group.Read.All, Directory.Read.All |
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
 
   </TabItem>
 </Tabs>
