--- a/docs/docs/cmd/entra/m365group/m365group-set.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-set.mdx
@@ -65,9 +65,9 @@ m365 entra m365group set [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                                  |
-  |-----------------|----------------------------------------------|
-  | Microsoft Graph | Group.ReadWrite.All
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
 
   </TabItem>
   <TabItem value="Application">
