--- a/docs/docs/cmd/entra/groupsetting/groupsetting-add.mdx
+++ b/docs/docs/cmd/entra/groupsetting/groupsetting-add.mdx
@@ -26,16 +26,16 @@ m365 entra groupsetting add [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                                  |
-  |-----------------|----------------------------------------------|
-  | Microsoft Graph | GroupSettings.ReadWrite.All, Directory.ReadWrite.All |
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | GroupSettings.ReadWrite.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions  |
-  |-----------------|--------------|
-  | Microsoft Graph | GroupSettings.ReadWrite.All, Directory.ReadWrite.All |
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | GroupSettings.ReadWrite.All |
 
   </TabItem>
 </Tabs>
