--- a/docs/docs/cmd/entra/groupsetting/groupsetting-list.mdx
+++ b/docs/docs/cmd/entra/groupsetting/groupsetting-list.mdx
@@ -21,16 +21,16 @@ m365 entra groupsetting list [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                                  |
-  |-----------------|----------------------------------------------|
-  | Microsoft Graph | GroupSettings.Read.All, Directory.Read.All, Group.Read.All |
+  | Resource        | Permissions            |
+  |-----------------|------------------------|
+  | Microsoft Graph | GroupSettings.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions  |
-  |-----------------|--------------|
-  | Microsoft Graph | GroupSettings.Read.All, Directory.Read.All, Group.Read.All |
+  | Resource        | Permissions            |
+  |-----------------|------------------------|
+  | Microsoft Graph | GroupSettings.Read.All |
 
   </TabItem>
 </Tabs>
