--- a/docs/docs/cmd/entra/user/user-remove.mdx
+++ b/docs/docs/cmd/entra/user/user-remove.mdx
@@ -45,6 +45,13 @@ After running this command, it may take a minute before the user is effectively 
 
 :::
 
+## Permissions
+
+| Permission type | Required permissions |
+|-----------------|----------------------|
+| Delegated (work or school account) | Microsoft Graph: User.ReadWrite.All |
+| Application | Microsoft Graph: User.ReadWrite.All |
+
 ## Examples
 
 Removes a specific user by id.
