--- a/docs/docs/cmd/entra/user/user-add.mdx
+++ b/docs/docs/cmd/entra/user/user-add.mdx
@@ -87,6 +87,13 @@ This command allows using unknown options. For a comprehensive list of user prop
 
 If the specified option is not found, you will receive a `Resource 'xyz' does not exist or one of its queried reference-property objects are not present.` error.
 
+## Permissions
+
+| Permission type | Required permissions |
+|-----------------|----------------------|
+| Delegated (work or school account) | Microsoft Graph: User.ReadWrite.All |
+| Application | Microsoft Graph: User.ReadWrite.All |
+
 ## Examples
 
 Create a user and let him/her update the password at first login.
