--- a/docs/docs/cmd/entra/user/user-set.mdx
+++ b/docs/docs/cmd/entra/user/user-set.mdx
@@ -82,6 +82,13 @@ This command allows using unknown options. For a comprehensive list of user prop
 
 If the user with the specified ID or username doesn't exist, or if the specified option is not found, you will receive a `Resource 'xyz' does not exist or one of its queried reference-property objects are not present.` error.
 
+## Permissions
+
+| Permission type | Required permissions |
+|-----------------|----------------------|
+| Delegated (work or school account) | Microsoft Graph: User.ReadWrite.All, Directory.Read.All |
+| Application | Microsoft Graph: User.ReadWrite.All |
+
 ## Examples
 
 Update specific property _department_ of user with id _1caf7dcd-7e83-4c3a-94f7-932a1299c844_
