--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -20,6 +20,7 @@ sidebar_position: 4
 - migrated [outlook roomlist list](../cmd/outlook/roomlist/roomlist-list.mdx) to Zod [#6899](https://github.com/pnp/cli-microsoft365/issues/6899)
 - migrated [onedrive list](../cmd/onedrive/onedrive-list.mdx) to Zod [#6900](https://github.com/pnp/cli-microsoft365/issues/6900)
 - migrated [planner tenant settings list](../cmd/planner/tenant/tenant-settings-list.mdx) to Zod [#6895](https://github.com/pnp/cli-microsoft365/issues/6895)
+- updated eslint dependencies in the codebase [#6350](https://github.com/pnp/cli-microsoft365/issues/6350)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
