standardize permissions table formatting across all entra user commands

--- a/docs/docs/cmd/entra/user/user-add.mdx
+++ b/docs/docs/cmd/entra/user/user-add.mdx
@@ -87,12 +87,14 @@ This command allows using unknown options. For a comprehensive list of user prop
 
 If the specified option is not found, you will receive a `Resource 'xyz' does not exist or one of its queried reference-property objects are not present.` error.
 
-## Permissions
+### Permissions
 
-| Permission type | Required permissions |
-|-----------------|----------------------|
-| Delegated (work or school account) | Microsoft Graph: User.ReadWrite.All |
-| Application | Microsoft Graph: User.ReadWrite.All |
+The following permissions are required to run this command.
+
+| Permission type | Permissions (least privileged) |
+|-----------------|-------------------------------|
+| Delegated (work or school account) | User.ReadWrite.All |
+| Application | User.ReadWrite.All |
 
 ## Examples
 
