--- a/docs/docs/cmd/entra/user/user-get.mdx
+++ b/docs/docs/cmd/entra/user/user-get.mdx
@@ -39,12 +39,14 @@ You can retrieve information about a user, either by specifying that user's id, 
 
 If the user with the specified id, user name, or email doesn't exist, you will get a `Resource 'xyz' does not exist or one of its queried reference-property objects are not present.` error.
 
-## Permissions
+### Permissions
 
-| Permission type | Required permissions |
-|-----------------|----------------------|
-| Delegated (work or school account) | Microsoft Graph: User.Read.All |
-| Application | Microsoft Graph: User.Read.All |
+The following permissions are required to run this command.
+
+| Permission type | Permissions (least privileged) |
+|-----------------|-------------------------------|
+| Delegated (work or school account) | User.Read.All |
+| Application | User.Read.All |
 
 ## Examples
 
