--- a/docs/docs/cmd/entra/user/user-hibp.mdx
+++ b/docs/docs/cmd/entra/user/user-hibp.mdx
@@ -33,7 +33,9 @@ If the user with the specified user name doesn't involved in any breach, you wil
 
 If `API Key` is invalid, you will get a `Required option apiKey not specified` error.
 
-## Permissions
+### Permissions
+
+The following permissions are required to run this command.
 
 This command uses the Have I Been Pwned API. It does not call Microsoft Graph and therefore does not require Microsoft Graph permissions. It requires an API key for the Have I Been Pwned service (see `--apiKey`).
 
