--- a/docs/docs/cmd/entra/user/user-remove.mdx
+++ b/docs/docs/cmd/entra/user/user-remove.mdx
@@ -45,12 +45,14 @@ After running this command, it may take a minute before the user is effectively 
 
 :::
 
-## Permissions
+### Permissions
 
-| Permission type | Required permissions |
-|-----------------|----------------------|
-| Delegated (work or school account) | Microsoft Graph: User.ReadWrite.All |
-| Application | Microsoft Graph: User.ReadWrite.All |
+The following permissions are required to run this command.
+
+| Permission type | Permissions (least privileged) |
+|-----------------|-------------------------------|
+| Delegated (work or school account) | User.ReadWrite.All |
+| Application | User.ReadWrite.All |
 
 ## Examples
 
