--- a/docs/docs/cmd/entra/user/user-list.mdx
+++ b/docs/docs/cmd/entra/user/user-list.mdx
@@ -34,12 +34,14 @@ To filter the list of users, include additional options that match the user prop
 
 Certain properties cannot be returned within a user collection. The following properties are only supported when retrieving an single user using: `aboutMe`, `birthday`, `hireDate`, `interests`, `mySite`, `pastProjects`, `preferredName`, `responsibilities`, `schools`, `skills`, `mailboxSettings`.
 
-## Permissions
+### Permissions
 
-| Permission type | Required permissions |
-|-----------------|----------------------|
-| Delegated (work or school account) | Microsoft Graph: User.Read.All, Directory.Read.All |
-| Application | Microsoft Graph: User.Read.All |
+The following permissions are required to run this command.
+
+| Permission type | Permissions (least privileged) |
+|-----------------|-------------------------------|
+| Delegated (work or school account) | Directory.Read.All, User.Read.All |
+| Application | User.Read.All |
 
 ## Examples
 
