Fix permissions tables alignment for all m365 entra user commands

--- a/docs/docs/cmd/entra/user/user-add.mdx
+++ b/docs/docs/cmd/entra/user/user-add.mdx
@@ -89,12 +89,12 @@ If the specified option is not found, you will receive a `Resource 'xyz' does no
 
 ### Permissions
 
-The following permissions are required to run this command.
+The following permissions are required to run this command:
 
-| Permission type | Permissions (least privileged) |
-|-----------------|-------------------------------|
-| Delegated (work or school account) | User.ReadWrite.All |
-| Application | User.ReadWrite.All |
+| Permission Type                   | Permission          | Description                        |
+|---------------------------------  |--------------------  |-----------------------------------|
+| Delegated (work or school account)| User.ReadWrite.All | Allows creating and updating users  |
+| Application                       | User.ReadWrite.All  | Allows creating and updating users |
 
 ## Examples
 
