--- a/docs/docs/cmd/entra/user/user-get.mdx
+++ b/docs/docs/cmd/entra/user/user-get.mdx
@@ -41,12 +41,12 @@ If the user with the specified id, user name, or email doesn't exist, you will g
 
 ### Permissions
 
-The following permissions are required to run this command.
+The following permissions are required to run this command:
 
-| Permission type | Permissions (least privileged) |
-|-----------------|-------------------------------|
-| Delegated (work or school account) | User.Read.All |
-| Application | User.Read.All |
+| Permission Type                   | Permission(s)  | Description                     |
+|---------------------------------- |----------------|-------------------------------- |
+| Delegated (work or school account)| User.Read.All  | Allows reading user information |
+| Application                       | User.Read.All  | Allows reading user information |
 
 ## Examples
 
