--- a/docs/docs/cmd/entra/user/user-list.mdx
+++ b/docs/docs/cmd/entra/user/user-list.mdx
@@ -36,12 +36,12 @@ Certain properties cannot be returned within a user collection. The following pr
 
 ### Permissions
 
-The following permissions are required to run this command.
+The following permissions are required to run this command:
 
-| Permission type | Permissions (least privileged) |
-|-----------------|-------------------------------|
-| Delegated (work or school account) | Directory.Read.All, User.Read.All |
-| Application | User.Read.All |
+| Permission Type                   | Permission(s)                     | Description                                 |
+|---------------------------------- |---------------------------------- |---------------------------------------------|
+| Delegated (work or school account)| Directory.Read.All, User.Read.All | Allows reading directory data and user info |
+| Application                       | User.Read.All                     | Allows reading user info                    |
 
 ## Examples
 
