--- a/docs/docs/cmd/entra/user/user-remove.mdx
+++ b/docs/docs/cmd/entra/user/user-remove.mdx
@@ -47,12 +47,12 @@ After running this command, it may take a minute before the user is effectively 
 
 ### Permissions
 
-The following permissions are required to run this command.
+The following permissions are required to run this command:
 
-| Permission type | Permissions (least privileged) |
-|-----------------|-------------------------------|
-| Delegated (work or school account) | User.ReadWrite.All |
-| Application | User.ReadWrite.All |
+| Permission Type                   | Permission(s)          | Description                        |
+|---------------------------------- |------------------------|----------------------------------- |
+| Delegated (work or school account)| User.ReadWrite.All     | Allows creating and updating users |
+| Application                       | User.ReadWrite.All     | Allows creating and updating users |
 
 ## Examples
 
