--- a/docs/docs/cmd/entra/user/user-set.mdx
+++ b/docs/docs/cmd/entra/user/user-set.mdx
@@ -84,12 +84,12 @@ If the user with the specified ID or username doesn't exist, or if the specified
 
 ### Permissions
 
-The following permissions are required to run this command.
+The following permissions are required to run this command:
 
-| Permission type | Permissions (least privileged) |
-|-----------------|-------------------------------|
-| Delegated (work or school account) | User.ReadWrite.All, Directory.Read.All |
-| Application | User.ReadWrite.All |
+| Permission Type                   | Permission(s)                          | Description                                               |
+|---------------------------------- |--------------------------------------- |-------------------------------------------------------    |
+| Delegated (work or school account)| User.ReadWrite.All, Directory.Read.All | Allows creating/updating users and reading directory data |
+| Application                       | User.ReadWrite.All                     | Allows creating and updating users                        |
 
 ## Examples
 
