Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -21,6 +21,9 @@ sidebar_position: 4
 - migrated [onedrive list](../cmd/onedrive/onedrive-list.mdx) to Zod [#6900](https://github.com/pnp/cli-microsoft365/issues/6900)
 - migrated [planner tenant settings list](../cmd/planner/tenant/tenant-settings-list.mdx) to Zod [#6895](https://github.com/pnp/cli-microsoft365/issues/6895)
 - updated eslint dependencies in the codebase [#6350](https://github.com/pnp/cli-microsoft365/issues/6350)
+- added minimal permissions for 'entra enterpriseapp' commands [#6927](https://github.com/pnp/cli-microsoft365/issues/6927)
+- added minimal permissions for 'entra m365group' commands [#6944](https://github.com/pnp/cli-microsoft365/issues/6944)
+- added minimal permissions for 'entra groupsetting' commands [#6937](https://github.com/pnp/cli-microsoft365/issues/6937)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
