Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,6 +6,12 @@ sidebar_position: 4
 
 ## v11.1.0 (beta)
 
+### New commands
+
+**SharePoint:**
+
+- [spo site alert list](../cmd/spo/site/site-alert-list.mdx) - lists all SharePoint list alerts [#6861](https://github.com/pnp/cli-microsoft365/issues/6861)
+
 ### Changes
 
 - migrated [flow environment list](../cmd/flow/environment/environment-list.mdx) to Zod [#6901](https://github.com/pnp/cli-microsoft365/issues/6901)
@@ -255,7 +261,7 @@ sidebar_position: 4
 
 **SharePoint:**
 
-- [spo homesite add](../cmd/spo/homesite/homesite-add.mdx) - Adds a home site [#6488](https://github.com/pnp/cli-microsoft365/issues/6488)
+- [spo homesite add](../cmd/spo/homesite/homesite-add.mdx) - adds a home site [#6488](https://github.com/pnp/cli-microsoft365/issues/6488)
 - [spo page section remove](../cmd/spo/page/page-section-remove.mdx) - removes a section from a modern page [#6541](https://github.com/pnp/cli-microsoft365/issues/6541)
 
 **Viva:**
