--- a/docs/docs/cmd/entra/group/group-member-list.mdx
+++ b/docs/docs/cmd/entra/group/group-member-list.mdx
@@ -37,6 +37,24 @@ m365 entra group member list [options]
 
 When the `properties` option includes values with a `/`, for example: `manager/displayName`, an additional `$expand` query parameter will be included on `manager`.
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | GroupMember.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | GroupMember.Read.All |
+  
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List all group members from a group specified by ID.
