--- a/docs/docs/cmd/entra/group/group-member-remove.mdx
+++ b/docs/docs/cmd/entra/group/group-member-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra group member remove
 
@@ -52,6 +54,24 @@ This feature proves useful when you need to remove a user from a group, but you 
 Without using this option, you would need to manually verify the user's role in the group before proceeding with removal.
 
 :::
+
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+  
+  </TabItem>
+</Tabs>
 
 ## Examples
 
