Added minimal permission for 'entra group' commands. Closes #6935

--- a/docs/docs/cmd/entra/group/group-add.mdx
+++ b/docs/docs/cmd/entra/group/group-add.mdx
@@ -76,6 +76,24 @@ This command allows using unknown options. For a comprehensive list of group pro
 
 If the specified option is not found, you will receive a `Resource 'xyz' does not exist or one of its queried reference-property objects are not present.` error.
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a security group without any owners or members
