Added minimal permission

--- a/docs/docs/cmd/entra/group/group-list.mdx
+++ b/docs/docs/cmd/entra/group/group-list.mdx
@@ -28,6 +28,24 @@ m365 entra group list [options]
 
 Using the `--properties` option, you can specify a comma-separated list of group properties to retrieve from the Microsoft Graph. If you don't specify any properties, the command will output the default properties returned by Graph.
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Lists all groups defined in Entra ID.
