Fix-6942-Added minimal permissions for 'entra m365group user'

--- a/docs/docs/cmd/entra/m365group/m365group-user-add.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-user-add.mdx
@@ -43,6 +43,27 @@ m365 teams user add [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Add a new member with the userNames parameter to the specified Microsoft 365 Group.
