--- a/docs/docs/cmd/entra/m365group/m365group-user-list.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-user-list.mdx
@@ -33,6 +33,25 @@ m365 entra m365group user list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | GroupMember.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | GroupMember.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Remarks
 
 When the `properties` option includes values with a `/`, for example: `manager/displayName`, an additional `$expand` query parameter will be included on `manager`.
