--- a/docs/docs/cmd/entra/m365group/m365group-user-remove.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-user-remove.mdx
@@ -37,6 +37,27 @@ m365 entra m365group user remove [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Remarks
 
 You can remove users from a Microsoft 365 Group or Microsoft Teams team if you are owner of that group or team.
