--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
@@ -23,7 +23,7 @@ m365 spo applicationcustomizer add [options]
 : Client-side component ID of the application customizer (GUID).
 
 `--description [description]`
-: Description for the SPFx app.
+: Description of the application customizer.
 
 `--clientSideComponentProperties [clientSideComponentProperties]`
 : JSON string with application customizer properties.
