--- a/docs/docs/cmd/spo/commandset/commandset-add.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-add.mdx
@@ -28,7 +28,7 @@ m365 spo commandset add [options]
 : The Client Side Component Id (GUID) of the ListView Command Set.
 
 `--description [description]`
-: Description for the SPFx app.
+: Description of the ListView Command Set.
 
 `--clientSideComponentProperties [clientSideComponentProperties]`
 : The Client Side Component properties of the ListView Command Set.
