--- a/docs/docs/cmd/spo/commandset/commandset-set.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-set.mdx
@@ -32,7 +32,7 @@ m365 spo commandset set [options]
 : The new title of the ListView Command Set.
 
 `--description [description]`
-: Description for the SPFx app.
+: Description of the ListView Command Set.
 
 `-l, --listType [listType]`
 : The list or library type to register the Command Set on. Allowed values are: `List`, `Library` or `SitePages`.
