--- a/docs/docs/cmd/entra/m365group/m365group-report-activitygroupcounts.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitygroupcounts.mdx
@@ -32,6 +32,24 @@ This command supports only csv and json output.
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get the daily total number of groups and how many of them were active based on activities for the last week
