--- a/docs/docs/cmd/entra/m365group/m365group-report-activitydetail.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitydetail.mdx
@@ -35,6 +35,24 @@ This command supports only csv and json output.
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get details about Microsoft 365 Groups activity by group for the last week
