--- a/docs/docs/cmd/entra/m365group/m365group-report-activitystorage.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitystorage.mdx
@@ -32,6 +32,24 @@ This command supports only csv and json output.
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get the total storage used across all group mailboxes and group sites for the last week
