Added minimal permission for 'entra m365group report' commands. Closes #6943

--- a/docs/docs/cmd/entra/m365group/m365group-report-activitycounts.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitycounts.mdx
@@ -32,6 +32,24 @@ This command supports only csv and json output.
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions      |
+  |-----------------|------------------|
+  | Microsoft Graph | Reports.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get the number of group activities across group workloads for the last week
