Added minimal permissions for 'entra m365group recyclebinitem' commands. Closes #6941

--- a/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-list.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-list.mdx
@@ -24,6 +24,25 @@ m365 entra m365group recyclebinitem list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List all deleted Microsoft 365 Groups in the tenant
