--- a/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-restore.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-restore.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra m365group recyclebinitem restore
 
@@ -24,6 +26,25 @@ m365 entra m365group recyclebinitem restore [options]
 ```
 
 <Global />
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
