--- a/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-remove.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra m365group recyclebinitem remove
 
@@ -27,6 +29,18 @@ m365 entra m365group recyclebinitem remove [options]
 ```
 
 <Global />
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
