--- a/docs/docs/cmd/graph/directoryextension/directoryextension-get.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-get.mdx
@@ -33,6 +33,25 @@ m365 graph directoryextension get [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions        |
+  |-----------------|--------------------|
+  | Microsoft Graph | Directory.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions        |
+  |-----------------|--------------------|
+  | Microsoft Graph | Directory.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get directory extension by id registered for an application specified by app id.
