--- a/docs/docs/cmd/graph/directoryextension/directoryextension-remove.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # graph directoryextension remove
 
@@ -33,6 +35,25 @@ m365 graph directoryextension remove [options]
 ```
 
 <Global />
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | Directory.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | Directory.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
