--- a/docs/docs/cmd/graph/directoryextension/directoryextension-add.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-add.mdx
@@ -39,6 +39,25 @@ m365 graph directoryextension add [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | Directory.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | Directory.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a new directory extension of string type defined for user resource.
