--- a/docs/docs/cmd/graph/directoryextension/directoryextension-list.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-list.mdx
@@ -37,6 +37,24 @@ Otherwise, it will return directory extensions for a specific application.
 
 https://learn.microsoft.com/en-us/graph/api/application-list-extensionproperty?view=graph-rest-1.0&tabs=http
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get all available directory extensions including those registered for multi-tenant apps
