--- a/docs/docs/cmd/graph/openextension/openextension-add.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-add.mdx
@@ -39,6 +39,30 @@ When creating open extensions it's possible to enter a JSON string. In PowerShel
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | User.ReadWrite             |
+  | Microsoft Graph | Group.ReadWrite.All        |
+  | Microsoft Graph | Directory.AccessAsUser.All |
+  | Microsoft Graph | Organization.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | User.ReadWrite.All         |
+  | Microsoft Graph | Group.ReadWrite.All        |
+  | Microsoft Graph | Device.ReadWrite.All       |
+  | Microsoft Graph | Organization.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a new open extension for a user specified by id. Extension properties are specified by unknown options.
