--- a/docs/docs/cmd/graph/openextension/openextension-get.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-get.mdx
@@ -27,6 +27,29 @@ m365 graph openextension get [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions        |
+  |-----------------|--------------------|
+  | Microsoft Graph | User.Read          |
+  | Microsoft Graph | Group.Read.All     |
+  | Microsoft Graph | Directory.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions           |
+  |-----------------|-----------------------|
+  | Microsoft Graph | User.Read.All         |
+  | Microsoft Graph | Group.Read.All        |
+  | Microsoft Graph | Device.ReadWrite.All  |
+  | Microsoft Graph | Organization.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Retrieve a specified open extension for a user specified by id.
