--- a/docs/docs/cmd/graph/openextension/openextension-list.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-list.mdx
@@ -24,6 +24,29 @@ m365 graph openextension list [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions        |
+  |-----------------|--------------------|
+  | Microsoft Graph | User.Read          |
+  | Microsoft Graph | Group.Read.All     |
+  | Microsoft Graph | Directory.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions           |
+  |-----------------|-----------------------|
+  | Microsoft Graph | User.Read.All         |
+  | Microsoft Graph | Group.Read.All        |
+  | Microsoft Graph | Device.ReadWrite.All  |
+  | Microsoft Graph | Organization.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Retrieve open extensions for a user specified by id
