--- a/docs/docs/cmd/graph/openextension/openextension-remove.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-remove.mdx
@@ -30,6 +30,30 @@ m365 graph openextension remove [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | User.ReadWrite             |
+  | Microsoft Graph | Group.ReadWrite.All        |
+  | Microsoft Graph | Directory.AccessAsUser.All |
+  | Microsoft Graph | Organization.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | User.ReadWrite.All         |
+  | Microsoft Graph | Group.ReadWrite.All        |
+  | Microsoft Graph | Device.ReadWrite.All       |
+  | Microsoft Graph | Organization.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Remove a specified open extension for a user specified by id.
