--- a/docs/docs/cmd/graph/openextension/openextension-set.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-set.mdx
@@ -50,6 +50,30 @@ If a property of the open extension is not specified and `keepUnchangedPropertie
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | User.ReadWrite             |
+  | Microsoft Graph | Group.ReadWrite.All        |
+  | Microsoft Graph | Directory.AccessAsUser.All |
+  | Microsoft Graph | Organization.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | User.ReadWrite.All         |
+  | Microsoft Graph | Group.ReadWrite.All        |
+  | Microsoft Graph | Device.ReadWrite.All       |
+  | Microsoft Graph | Organization.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Updates an open extension for a user specified by id
